--- a/README.textile
+++ b/README.textile
@@ -19,32 +19,35 @@ To install with gem:
 h2. Usage
 
 Generate a TestRunner
+
+@param output file
+@param
 <pre><code>
- # Rake task to create the test runner actionscript
- #
- # @param output file
- # @param test classes file list
- # @param report server port
- Semilla::test_runner "outputfile.as", FileList["test-src/**/*Test.as"], 1026
+notextile. # Rake task to create the test runner actionscript
+notextile. #
+notextile. # @param output file
+notextile. # @param test classes file list
+notextile. # @param report server port
+Semilla::test_runner "outputfile.as", FileList["test-src/**/*Test.as"], 1026
 
 </code></pre>
 
 
 Run the test and obtain a report.
 <pre><code>
- # Rake task to test a swf and get a report in junit xml format.
- #
- # @param task id
- # @param dependencies
- Semilla::flex_unit :taskname => [dependencies]] do |t|
-    #Configuration options
-    #    serverPort :player, :swf, :reportpath, :timeout
-    #    serverPort :player, :swf, :reportpath, :timeout
-    t.serverPort = 1026
-    t.swf = "app.swf"
-    t.reportpath = "reports"
-    t.timeout = 10
- end
+notextile. # Rake task to test a swf and get a report in junit xml format.
+notextile. #
+notextile. # @param task id
+notextile. # @param dependencies
+notextile. Semilla::flex_unit :taskname => [dependencies]] do |t|
+notextile.    #Configuration options
+notextile.    #    serverPort :player, :swf, :reportpath, :timeout
+notextile.    #    serverPort :player, :swf, :reportpath, :timeout
+notextile.    t.serverPort = 1026
+notextile.    t.swf = "app.swf"
+notextile.    t.reportpath = "reports"
+notextile.    t.timeout = 10
+notextile. end
 
 </code></pre>
 
